[gd_scene load_steps=4 format=3 uid="uid://dv6gaj2evpxoq"]

[ext_resource type="Script" path="res://Scenes/Enemies/base_enemy.gd" id="1_t2nk1"]
[ext_resource type="PackedScene" uid="uid://dtng6objwar3c" path="res://Scenes/Components/health_bar.tscn" id="2_7g8mk"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_80le8"]
size = Vector2(39, 32)

[node name="BaseEnemy" type="Area2D" groups=["Enemy"]]
script = ExtResource("1_t2nk1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(19.5, 16)
shape = SubResource("RectangleShape2D_80le8")

[node name="Center" type="Marker2D" parent="."]
position = Vector2(20, 15)

[node name="HealthBar" parent="." instance=ExtResource("2_7g8mk")]

[node name="AttackTimer" type="Timer" parent="."]
